# qsl

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README_EN.md  publish_pypi.py  push_gitee.py  pyproject.toml  qsl.py  setup.py
.github/workflows/: build.yml  lint.yml  test.yml
docs/: index.md
docs/api/: ai.md  algorithms.md  circuit.md  core.md  visualization.md
docs/tutorial/: 01_getting_started.md  02_circuit_basics.md  03_grover_search.md  04_shor_factorization.md  05_qaoa_optimization.md  06_vqe_chemistry.md  07_ai_scientist.md  08_visualization.md  09_cli_guide.md
qsl/: __init__.py  __main__.py  quantum_gates.py
qsl/ai/: __init__.py  agent.py  demos.py  discovery.py  explainer.py  hypotheses.py  llm_provider.py  report.py  translator.py  verifier.py
qsl/algorithms/: __init__.py  qaoa.py  qft.py  shor.py  vqe.py
qsl/backends/: __init__.py  auto_selector.py  aws_braket.py  base.py  ibm.py  registry.py  simulator.py
qsl/circuit/: __init__.py  circuit.py  converters.py  gate.py  library.py  parameter.py  qasm.py  text_drawer.py
qsl/compiler/: __init__.py  compiler.py  dsl.py  error_mitigation.py  optimizer.py  program.py  transpiler.py
qsl/core/: __init__.py  grover.py  oracle.py  parser.py  state.py
qsl/meta/: __init__.py  algorithm_search.py  quantum_compiler_ai.py  theory_generator.py
qsl/network/: __init__.py  distributed_node.py  quantum_blockchain.py
qsl/pipelines/: __init__.py  crypto_analysis.py  drug_discovery.py  portfolio.py
qsl/qml/: __init__.py  kernels.py  layers.py  qgan.py  qnn.py  qsvm.py
qsl/utils/: __init__.py  exceptions.py  validation.py
qsl/viz/: __init__.py  circuit_drawer.py  state_viz.py
tests/: __init__.py  test_ai.py  test_algorithms.py  test_backends.py  test_circuit.py  test_compiler.py  test_compiler_opt.py  test_converters.py  test_cross_qiskit.py  test_demos.py  test_fixes.py  test_grover.py  test_integration.py  test_llm_provider.py  test_meta.py  test_network.py  test_parser.py  test_pipelines.py  test_property.py  test_qasm.py  test_qml.py  test_state.py  test_verifier.py  test_viz.py
